<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <string name="this_profile">You just entered Profile Activity</string>
    <string name="this_category">You just entered Catgory Fragment</string>
    <string name="category_lifestyle">Go to Lifestyle Fragment</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Go to Profile</string>
    <string name="show_dialog">Show a Dialog</string>
    <string name="hello_home_fragment">You just entered Home Fragment</string>
    <string name="to_category">Go to Category</string>
    <string name="question_singer">Who owns the song "INVU"?</string>
    <string name="taeyeon_kim">Taeyeon Kim</string>
    <string name="wendy_son">Wendy Son</string>
    <string name="yuju_kim">Yuju Kim</string>
    <string name="hyejin_ahn">Hyejin Ahn</string>
    <string name="choose">Choose</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>