<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/bp_gray"
    tools:context=".QuizDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/bp_navy"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/question_singer"/>

    <RadioGroup
        android:id="@+id/rg_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_taeyeon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins"
            android:textColor="@color/bp_navy"
            android:text="@string/taeyeon_kim" />
        <RadioButton
            android:id="@+id/rb_wendy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins"
            android:textColor="@color/bp_navy"
            android:text="@string/wendy_son"/>
        <RadioButton
            android:id="@+id/rb_hyejin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins"
            android:textColor="@color/bp_navy"
            android:text="@string/hyejin_ahn"/>
        <RadioButton
            android:id="@+id/rb_yuju"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins"
            android:textColor="@color/bp_navy"
            android:text="@string/yuju_kim"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/bp_red"
            android:textColor="@color/white"
            android:text="@string/close" />

        <Button
            android:id="@+id/btn_choose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/bp_blue"
            android:layout_marginEnd="5dp"
            android:textColor="@color/bp_gray"
            android:text="@string/choose"/>

    </LinearLayout>

</LinearLayout>